# blob-shell

./: .gitignore  2  ;  Cargo.toml  README.md  output.txt
.codecrafters/: run.sh
src/: autocomplete.rs  builtin.rs  completer.rs  env.rs  input.rs  job.rs  jobs.rs  main.rs  parser.rs  process.rs  state.rs
src/ast/: mod.rs  tokenizer.rs
src/parser/: mod.rs  tokenizer.rs
tests/: command_completion.rs  common.rs  complete_builtin.rs  core_builtins.rs  core_builtins_test.rs  filename_completion.rs  navigation.rs  navigation_test.rs  pipeline.rs  quoting.rs  quoting_test.rs  redirection.rs  redirection_test.rs
tests/common/: mod.rs
