[package]
name = "blob-shell"
version = "0.1.0"
authors = ["OFYA61 <ahamzaaydin.py@gmail.com>"]
edition = "2024"
rust-version = "1.95"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
retry = "2.2.0"
rexpect = "0.7.1"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
